<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listtwoRowModel" type="com.vlassapplication.app.modules.menuconsumables.data.model.ListtwoRowModel"/>
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/groupStylegray_200cornerRadius"
        android:layout_marginBottom="@dimen/_10pxv">
        <View
            android:id="@+id/progressBarView"
            android:layout_width="@dimen/_50pxh"
            android:layout_height="@dimen/_80pxv"
            android:background="@drawable/rectangle_bg_gray_400_radius_35"/>
            <!--style="@style/groupStylegray_400cornerRadius"-->

        <LinearLayout android:id="@+id/linearRowtwo"
            android:layout_height="@dimen/_80pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" >
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumntwo"
                android:layout_height="wrap_content"
                android:layout_weight="0.73" android:layout_width="0dp"
                android:orientation="vertical">
                <TextView android:ellipsize="end" android:id="@+id/name"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{listtwoRowModel.name}"
                    style="@style/txtMontserratromanbold14" tools:text="@string/lbl10"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/description"
                   android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_27pxv"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true" android:text="@{listtwoRowModel.description}"
                    style="@style/txtMontserratromanregular9" tools:text="@string/msg_oilmotors_10w4"/>
            </LinearLayout>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearColumnfiftythree"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_51pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.27" android:layout_width="0dp" android:orientation="vertical">

                <TextView
                    android:id="@+id/ProgressText"
                    style="@style/txtMontserratromanregular11"
                    android:layout_width="@dimen/_30pxh"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_47pxh"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@{listtwoRowModel.progressText}"
                    tools:text="@string/lbl_53" />

                <TextView
                    android:id="@+id/leftKm"
                    style="@style/txtMontserratromanregular7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@{listtwoRowModel.leftKmText}"
                    tools:text="@string/msg_12304" />
                <TextView android:ellipsize="end"
                    android:id="@+id/deadKmage"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:gravity="end"
                    android:text="@{listtwoRowModel.useTimeText}"
                    style="@style/txtMontserratromanmedium14" tools:text="@string/lbl_35_304"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
