<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="updateKmageVM" type="com.vlassapplication.app.modules.updatekmage.data.viewmodel.UpdateKmageVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearUpdatekmage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_400">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearRowone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOne"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.91"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{updateKmageVM.updateKmageModel.txtOne}"
                    style="@style/txtMontserratextrabold24" tools:text="@string/lbl3"/>
                <ImageView android:id="@+id/imageClose"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_close"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_close"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/txtZipcode"
            style="@style/txtMontserratregular48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_55pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:letterSpacing="0.8"
            android:singleLine="true"
            android:text="@{updateKmageVM.updateKmageModel.txtZipcode}"
            tools:text="@string/lbl_22030" />
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btn" android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_50pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/lbl2" android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl2"/>
    </LinearLayout>
</layout>
