<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="changeMotoVM" type="com.vlassapplication.app.modules.changemoto.data.viewmodel.ChangeMotoVM"/>
    </data>
    <FrameLayout android:id="@+id/frameChangemoto"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_400">

        <LinearLayout
            android:id="@+id/linearColumnclose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginEnd="@dimen/_11pxh"
                android:gravity="center_horizontal"
                app:contentInsetStart="0dp">

                <LinearLayout
                    android:id="@+id/linearRowtextone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtTextOne"
                        style="@style/txtMontserratextrabold24"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_weight="0.92"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@{changeMotoVM.changeMotoModel.txtTextOne}"
                        tools:text="@string/msg5" />

                    <ImageView
                        android:id="@+id/imageClose"
                        android:layout_width="@dimen/_24pxh"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="@dimen/_23pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_close"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_close" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/linearColumntext"
                style="@style/groupStylecornerRadius_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30pxv"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtText"
                    style="@style/txtMontserratromanbold14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{changeMotoVM.changeMotoModel.txtText}"
                    tools:text="@string/lbl4" />

                <View
                    android:id="@+id/viewRectangleThree"
                    android:layout_width="@dimen/_340pxh"
                    android:layout_height="@dimen/_40pxv"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:background="@drawable/rectangle_bg_gray_200_radius_20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearColumntextOne"
                style="@style/groupStylecornerRadius_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTextOne1"
                    style="@style/txtMontserratromanbold14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{changeMotoVM.changeMotoModel.txtTextOne1}"
                    tools:text="@string/lbl5" />

                <View
                    android:id="@+id/viewRectangleThreeOne"
                    android:layout_width="@dimen/_340pxh"
                    android:layout_height="@dimen/_40pxv"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:background="@drawable/rectangle_bg_gray_200_radius_20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearColumntextTwo"
                style="@style/groupStylecornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11pxv"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTextTwo"
                    style="@style/txtMontserratromanbold14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{changeMotoVM.changeMotoModel.txtTextTwo}"
                    tools:text="@string/lbl6" />

                <View
                    android:id="@+id/viewRectangleThreeTwo"
                    android:layout_width="@dimen/_340pxh"
                    android:layout_height="@dimen/_40pxv"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:background="@drawable/rectangle_bg_gray_200_radius_20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearColumntextThree"
                style="@style/groupStylecornerRadius_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTextThree"
                    style="@style/txtMontserratromanbold14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{changeMotoVM.changeMotoModel.txtTextThree}"
                    tools:text="@string/lbl7" />

                <View
                    android:id="@+id/viewRectangleThreeThree"
                    android:layout_width="@dimen/_340pxh"
                    android:layout_height="@dimen/_40pxv"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:background="@drawable/rectangle_bg_gray_200_radius_20" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn"
                style="@style/btnSolidRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30pxv"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/lbl2"
                android:textAllCaps="false"
                tools:text="@string/lbl2" />
        </LinearLayout>
    </FrameLayout>
</layout>
